--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,5 @@ services:
       - 8080
       - 8787
     volumes:
-      - ./target/HTTP-GET-request-mapper.jar:/opt/keycloak/providers/HTTP-GET-request-mapper.jar
+      - ./deployments/please-open.it-HTTP-GET-request-mapper-26.2.4-SNAPSHOT-jar-with-dependencies.jar:/opt/keycloak/providers/please-open.it-HTTP-GET-request-mapper-26.2.4-SNAPSHOT-jar-with-dependencies.jar
+      
